# dca-git

./: test.txt
DCA - BoostTest/: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Calc  Calculator.cpp  Makefile  cmake_install.cmake  test  testsTestSuite.cpp
DCA - Cmake/: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Calculator.h  Makefile  cmake_install.cmake  runner  runner.cpp  testsTestSuite.h
Testing/Temporary/: CTestCostData.txt
dca-dbc/D/: familia  familia.d
dca-dbc/Vala/: familia  familia.vala
dca-git-entregar/: helloWorld.c
dca-language/: Makefile  hello  hello.c
dca-language/po/: hello.pot
dca-language/po/es/: hello copy.mo  hello.po
dca-language/po/fr/: hello.mo  hello.po  hello.po~
dca-language/po/ru/: hello.po
